package com.halalai.backend.service;

import java.util.Map;

public interface IConfigService {
    Map<String, Object> getAvailableModels();
}
