package com.halalai.backend.service;

import com.halalai.backend.dto.VerseResponse;

public interface IVerseService {
    VerseResponse getVerseOfTheDay();
}
